feat : add possibility to remove people

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,10 @@
         <br>
         <button type="submit">Add User</button>
     </form>
+
+    <h1>User List</h1>
+    <ul id="userList"></ul>
+
     <script src="script.js"></script>
 </body>
 </html>
