--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,20 @@
         <button type="submit">Add User</button>
     </form>
 
+    <h1>Update User (click on person to select person to update)</h1>
+    <form id="updateForm">
+        <label for="updateId">User ID:</label>
+        <input type="text" id="updateId" name="updateId" required readonly>
+        <br>
+        <label for="updateName">Name:</label>
+        <input type="text" id="updateName" name="updateName" required>
+        <br>
+        <label for="updateEmail">Email:</label>
+        <input type="email" id="updateEmail" name="updateEmail" required>
+        <br>
+        <button type="submit">Update User</button>
+    </form>
+
     <h1>User List</h1>
     <ul id="userList"></ul>
 
