--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,20 @@
         <button type="submit">Add Post</button>
     </form>
 
+    <h1>Add a New order(non fonctionnelle)</h1>
+    <form id="orderForm">
+        <label for="orderUserId">User ID:</label>
+        <input type="text" id="orderUserId" name="orderUserId" required>
+        <br>
+        <label for="orderTitle">Title:</label>
+        <input type="text" id="orderTitle" name="orderTitle" required>
+        <br>
+        <label for="orderContent">Content:</label>
+        <textarea id="orderContent" name="orderContent" required></textarea>
+        <br>
+        <button type="submit">Add Post</button>
+    </form>
+
     <h1>User List</h1>
     <ul id="userList"></ul>
 
